# Drone-Swarm-Cooperative-Transport

./: LICENSE  README.md
CoppeliaSim Models/: readme.txt
CoppeliaSim Models/drone_project/: drone.ttm  drone_imu.ttm  drone_imu_noWind.ttm  drone_imu_noWind_ropeVacuum.ttm  drone_imu_ultrasonic_noWind_ropeVacuum_cam_dynamic.ttm  drone_imu_vacuum.ttm  drone_panoramic_pantilt.ttm  drone_pro.ttm  drone_pro2.0.ttm  drone_stitchingCam360_pantilt.ttm  drone_test_leader.ttm  simModelThumbnails.ttmt
CoppeliaSim Models/my_scene/: calibration.ttt  co-transportation.ttt  co-transportation1.0.ttt  image_listener_test.ttt  image_test.ttt  simple_example_0.ttt  simple_example_1.ttt  try10non-uniform.ttt  try2.0.ttt  try4.2.ttt  try5.1(panoramic).ttt  try6.0(leader_follower).ttt  try6.1(decentralized).ttt  try6.2.ttt  try6.4.2(obstacle_test).ttt  try6.4test.ttt  try7.0circle_nobound.ttt  try7.0concave.ttt  try7.0rectangular.ttt  try7.0rectangular_nobound.ttt  try7.0rectangular_small.ttt  try8.0peanut_nobound.ttt  try9.0L_nobound.ttt  try9.0rectangular_steep_nobound.ttt
CoppeliaSim Models/myfile/: drone_image_test.ttt  quadrotor_without_particles.ttt  try1.0.ttt  try1.1.ttt  try10single.ttt  try10uniform_nobound.ttt  try3.0.ttt  try4.0.ttt  try4.1(discard).ttt  try4.2(drone_imu_ultrasonic_noWind_ropeVacuum_Cam).ttt  try4.3(drone_noWind_vacuum_arucoMarker_).ttt  try5.0(image_stitching).ttt  try6.3test.ttt  try6.4.1(obstacle_test).ttt  try6.4space.ttt  try6.5(test).ttt  try6.5.ttt  try7.0circle.ttt  try7.0concave_nobound.ttt  try7.0peanut_nobound.ttt  try7.1test.ttt  try8.0L_nobound.ttt  try8.0cylinder_nobound.ttt  try8.0rectangular_nobound.ttt  try9.0peanut_nobound.ttt  try9.0rectangular_nobound.ttt  try_multi.ttt  wind_tunnel.ttt
drone_controller/: CMakeLists.txt  package.xml
drone_controller/include/: drone.h
drone_controller/include/controller_utility/: PID.h  controller_utility.h  flocking.h  obstacle_avoidance.h  random_velocity_flying.h  random_wp_flying.h
drone_controller/include/drone_control/: acceleration_control_loop.h  attitude_control_loop.h  position_control_loop.h  velocity_control_loop.h
drone_controller/include/other_sensors/: proximity_sensor.h  ultrasonic_sensor.h
drone_controller/include/vacuum/: vacuum.h
drone_controller/include/vision_sensor/: vision_sensor_down.h  vision_sensor_panoramic.h  vision_sensor_perspective.h  vision_sensor_stitching360.h
drone_controller/launch/: bacterium_cmd_generator.launch  bacterium_flocking.launch  destination_cmd_generator.launch  flocking_cmd_generator.launch  land.launch  lift.launch  swarm.launch  vacuum_cmd_generator.launch
drone_controller/src/: Navigator_traj.csv  bacterium_cmd_generator.cpp  destination_cmd_generator.cpp  drone.cpp  flocking_cmd_generator.cpp  land_wp_planning.cpp  lift_wp_planning.cpp  may18.py  navigator_carrier_pose_generator.cpp  nonuniform_cmd_generator.cpp  uniform_cmd_generator.cpp  vacuum_cmd_generator.cpp
drone_controller/src/controller_utility/: PID.cpp  controller_utility.cpp  flocking.cpp  obstacle_avoidance.cpp  random_velocity_flying.cpp  random_wp_flying.cpp
drone_controller/src/drone_control/: acceleration_control_loop.cpp  attitude_control_loop.cpp  position_control_loop.cpp  velocity_control_loop.cpp
drone_controller/src/other_sensors/: proximity_sensor.cpp  ultrasonic_sensor.cpp
drone_controller/src/vacuum/: vacuum.cpp
drone_controller/src/vision_sensor/: vision_sensor_down.cpp  vision_sensor_panoramic.cpp  vision_sensor_perspective.cpp  vision_sensor_stitching360.cpp
